# cpp-lib

./: .gitmodules  CMakeLists.txt
.github/workflows/: test.yml
src/: library.cpp  library.h
tests/: CMakeLists.txt  library.cpp
